--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.header {
+  background: linear-gradient(
+    to left,
+    rgb(249, 135, 4),
+    rgb(248, 248, 248),
+    rgb(245, 132, 2)
+  );
+  text-align: center;
+  padding: 40px 0px;
+}
+.main {
+  max-width: 500px;
+  margin: auto;
+  padding: 0px 0px 10px 0px;
+}
+.input-container {
+  background: linear-gradient(
+    to left,
+    rgb(254, 85, 1),
+    rgb(254, 85, 1),
+    rgb(254, 85, 1)
+  );
+}
+.input-container p {
+  font-size: 1.2rem;
+  padding: 5px 0px;
+  font-weight: bold;
+}
+.input-section {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px 10px;
+}
+.input-section select,
+input {
+  font-size: 1.2rem;
+  border-radius: 20px;
+  padding: 5px 0px 5px 10px;
+  border: none;
+  background-color: rgb(69, 240, 203);
+}
+.input-section select option {
+  border-radius: 90px;
+  background-color: rgb(196, 224, 95);
+  margin: 120px 0px;
+}
+.input-section button {
+  font-size: 1.5rem;
+  background-color: yellow;
+  width: 100px;
+  border: none;
+  border-radius: 10px;
+}
+.itemslist {
+  margin: 20px 100px;
+  /* background-color: rgb(172, 168, 168); */
+  /* width: 300px; */
+  border-radius: 100px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  font-size: 1.5rem;
+  gap: 20px;
+}
+.itemslist input {
+  width: 20px;
+}
+.uk-section {
+  background-color: rgb(75, 19, 19);
+  height: 65vh;
+}
+.ul-container {
+  background-color: rgb(75, 19, 19);
+  padding: 20px 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: wheat;
+}
+.footer p {
+  font-size: 2rem;
+  padding: 10px;
+  font-weight: bold;
+}
+.footer p span {
+  color: rgb(235, 9, 9);
+  font-weight: bold;
+}
+@media (max-width: 415px) {
+  .ul-container {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .input-section input {
+    width: 50%;
+  }
 }
